--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,56 +9,22 @@
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 
-  <!-- 채팅 공용 스타일 -->
+  <!-- 공용 스타일 -->
   <link rel="stylesheet" href="./styles/chat.css" />
-
-  <style>
-    html, body { height: 100%; margin: 0; background:#000; }
-    a-scene    { position: fixed; inset: 0; width: 100vw; height: 100vh; }
-    canvas, .a-canvas { width: 100% !important; height: 100% !important; display: block; }
-
-    /* 오버레이가 AR 위에 보이도록 */
-    #startAR, #log, #chatbar { position: fixed; z-index: 9999; }
-    #startAR{
-      left: 16px; right: 16px; bottom: 92px;
-      padding: 14px 16px; border: 0; border-radius: 12px;
-      background: #1e90ff; color: #fff; font-size: 16px;
-    }
-
-    /* 최소 오버레이 (chat.css가 있다면 겹치지 않도록 약하게 지정) */
-    #log{
-      left: 12px; right: 12px; bottom: 148px;
-      max-height: 40vh; overflow:auto; color:#fff; font:14px/1.4 system-ui;
-      pointer-events: none; /* 스크롤 필요하면 제거 */
-    }
-    #chatbar{
-      left: 0; right: 0; bottom: 0;
-      display: flex; gap: 8px; align-items: center;
-      padding: 10px 12px; background: rgba(0,0,0,.55); backdrop-filter: blur(4px);
-    }
-    #chatbar input{
-      flex:1; height:40px; border-radius:10px; border:1px solid #555; background:#111; color:#fff; padding:0 10px;
-    }
-    #chatbar button{
-      height:40px; border-radius:10px; border:0; padding:0 12px; background:#2d7eff; color:#fff;
-    }
-  </style>
 </head>
 <body>
 
-  <!-- AR.js: HIRO 마커 추적 -->
+  <!-- AR.js: HIRO 마커 추적 (기기 비율 자동 맞춤) -->
   <a-scene
     embedded
     vr-mode-ui="enabled: false"
-    renderer="precision: mediump; antialias: false"
+    renderer="precision: mediump; antialias: false; alpha: true"
     arjs="
       sourceType: webcam;
       facingMode: environment;
       detectionMode: mono;
       debugUIEnabled: false;
-      sourceWidth: 640;  sourceHeight: 480;
-      displayWidth: 640; displayHeight: 480;
-      videoTexture: true;
+      videoTexture: true
     "
   >
     <!-- HIRO 마커 위에 박스 표시 -->
@@ -70,10 +36,10 @@
     <a-entity camera></a-entity>
   </a-scene>
 
-  <!-- (일부 기기용) 사용자 제스처로 시작 -->
+  <!-- (일부 기기용) 사용자 제스처로 카메라 시작 -->
   <button id="startAR">AR 시작</button>
 
-  <!-- 채팅 오버레이 -->
+  <!-- 대화 로그 & 챗바 -->
   <div id="log" aria-live="polite"></div>
   <div id="chatbar">
     <button id="mic" title="음성 입력">🎤</button>
@@ -81,7 +47,26 @@
     <button id="send">보내기</button>
   </div>
 
-  <!-- 시작 스크립트 (사용자 제스처 후 카메라 시작) -->
+  <!-- 음성 인식 모달 -->
+  <div id="voiceModal" class="voicemodal hidden">
+    <div class="panel">
+      <div class="header">
+        <strong>음성 인식</strong>
+        <button id="voiceClose" aria-label="닫기">✕</button>
+      </div>
+
+      <div id="voiceStatus" class="status">대기 중</div>
+      <textarea id="voiceText" rows="4" placeholder="여기에 인식 결과가 표시됩니다."></textarea>
+
+      <div class="actions">
+        <button id="voiceStart">시작</button>
+        <button id="voiceStop" disabled>중지</button>
+        <button id="voiceApply">적용</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- AR 시작 버튼 로직 + 높이 보정(일부 기기) -->
   <script>
     const scene = document.querySelector('a-scene');
     const btn   = document.getElementById('startAR');
@@ -93,9 +78,15 @@
       scene.hasLoaded ? go() : scene.addEventListener('loaded', go, { once:true });
     };
     btn.addEventListener('click', start, { once:true });
+
+    // 일부 모바일 기기 초기 높이 보정
+    const fixSize = () => { scene.style.height = window.innerHeight + 'px'; };
+    window.addEventListener('load', fixSize);
+    window.addEventListener('resize', fixSize);
   </script>
 
-  <!-- 챗봇 로직 -->
+  <!-- 챗봇 + 음성 모달 로직 -->
   <script src="./scripts/chat.js" type="module"></script>
 </body>
 </html>
+
