--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
         <script>
           let pages = [
             { title: '두두 AR', category: 'AR Basics',
-              path: 'hit-test.html',
+              path: 'webxr-samples/hit-test.html',
               description: '두두 캐릭터를 AR로 불러와 상호작용해볼 수 있습니다.'},
 
             { title: '대구대 거리뷰 AR', category: 'AR Basics',
-              path: 'hit-test.html',
+              path: 'webxr-samples/hit-test.html',
               description: '두두와 대구대학교 캠퍼스를 AR로 둘러볼 수 있습니다.'},
 
             { tag: 'hr' },
             { tag: 'br' },
 
             { title: '샘플 캐릭터 1', category: 'Sample',
-              path: 'hit-test.html',
+              path: 'webxr-samples/hit-test.html',
               description: '여자 캐릭터와 간단한 대화를 체험할 수 있는 샘플입니다.'},
 
             { title: '샘플 캐릭터 2', category: 'Sample',
-              path: 'hit-test.html',
+              path: 'webxr-samples/hit-test.html',
               description: '남자 캐릭터와 간단한 대화를 체험할 수 있는 샘플입니다.'},
 
             { title: '샘플 캐릭터 3', category: 'Sample',
-              path: 'hit-test.html',
+              path: 'webxr-samples/hit-test.html',
               description: '여자 캐릭터와 간단한 대화를 체험할 수 있는 샘플입니다.'},
           ];
 
