--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               path: 'webxr-samples/hit-test.html',
               description: '두두 캐릭터를 AR로 불러와 상호작용해볼 수 있습니다.'},
 
-            { title: '대구대 거리뷰 AR', category: 'AR Basics',
+            { title: '대구대학교 로드뷰 AR', category: 'AR Basics',
               path: 'webxr-samples/hit-test.html',
               description: '두두와 대구대학교 캠퍼스를 AR로 둘러볼 수 있습니다.'},
 
